--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,37 +1,105 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Spring Security Example</title>
-    <link href="/webjars/bootstrap/5.0.1/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- JS -->
+    <link
+      href="/webjars/bootstrap/5.0.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
     <script src="/webjars/bootstrap/5.0.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-<div class="container">
-    <h2>Login Page</h2>
-    <div th:if="${param.error}" class="alert alert-danger">
+  </head>
+  <body>
+    <div class="container">
+      <h2>Login Page</h2>
+      <div th:if="${param.error}" class="alert alert-danger">
         Invalid username and password.
-    </div>
-    <div th:if="${param.logout}" class="alert alert-success">
+      </div>
+      <div th:if="${param.logout}" class="alert alert-success">
         You have been logged out.
+      </div>
+      <form
+	  	name="login-form"
+        id="login-form"
+      >
+        <p>
+          <label class="sr-only">Username</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            th:name="email"
+            th:value="${email}"
+            class="form-control"
+            placeholder="Email"
+            required
+            autofocus
+          />
+        </p>
+        <p>
+          <label class="sr-only">Password</label>
+          <input
+            type="password"
+            name="password"
+            th:name="password"
+            th:value="${password}"
+            class="form-control"
+            placeholder="Password"
+            required
+          />
+        </p>
+        <button id="login-button" class="btn btn-lg btn-primary btn-block" type="submit">
+          Login
+        </button>
+      </form>
     </div>
-    <form class="form-login" method="post" th:action="@{/auth}">
-        <p>
-            <label for="email" class="sr-only">Username</label>
-            <input type="email" th:field="*{email}" id="email" name="email" class="form-control"
-                   placeholder="Email" required autofocus>
-        </p>
-        <p>
-            <label for="password" class="sr-only">Password</label>
-            <input type="password" th:field="*{password}" id="password" name="password" class="form-control"
-                   placeholder="Password" required>
-        </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-    </form>
-</div>
+
+    <!--  Javascript  -->
+    <script>
+		const url = "http://localhost:8080/login";
+		const headers = {
+			"Content-Type": "application/json",
+		};
+
+    	const loginForm = document.getElementById('login-form');
+        const loginButton = document.getElementById('login-button');
+
+        loginButton.addEventListener("click", (e) => {
+            e.preventDefault();
+            const email = loginForm.email.value;
+            const password = loginForm.password.value;
+            // Post data to the server
+            postData({email: email, password: password})
+        });
+      
+		function postData(data) {  
+			const email = data.email;
+			fetch(url, {
+				method: "POST",
+				credentials: "same-origin",
+				headers: headers,
+				body: JSON.stringify(data),
+			})
+			.then(res => res.json())
+            .then(data => {
+                // Store token in localStorage
+                localStorage.setItem('email', email);
+                localStorage.setItem('token', data.jwtToken);
+            })
+			.catch(function (err) {
+				console.log("ERROR!..", err);
+			});
+		}        
+    </script>
+
 </body>
 </html>
